--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Random Knowledge Quiz</title>
-    <link rel="shortcut icon" type="image/jpg" href="assets/images/favicon.png">
+    <link rel="shortcut icon" type="image/jpg" href="https://oentegrasyon.github.io/linux-quiz/assets/images/favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200;500&family=Nunito+Sans:wght@300;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/style.css">
