--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <body>
     <div id="top-container">
-        <!-- <div><a href="#" id="view-highscores" class="">View Highscores</a></div> -->
+       <div><a href="cookies.html" id="view-highscores" class="">Cookies</a></div> 
         <div id="countdown-div">Time: <span id="countdown">120</span></div>
     </div>
     <div id="main-container">
