--- a/index.html
+++ b/index.html
@@ -90,6 +90,15 @@
     <script src="assets/js/questions.js"></script>
     <script src="assets/js/script.js"></script>
     <script data-cfasync="false" src="assets/js/form-submission-handler.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-V7BV056KK8"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-V7BV056KK8');
+    </script>
 </body>
 <footer align="center">
     <p><small>Thanks to <a href="https://github.com/jkaho">https://github.com/jkaho</a></small></p>
