--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Random Knowledge Quiz</title>
+    <title>Özgür Entegrasyon Linux  Quiz</title>
+    <meta name="google-site-verification" content="VyUGuNXMkHdI3DPglQgRg2-rD23heYAvi-WjpT1QZP8" />
+    <meta name="description" content="20 question linux exam">
+    <meta name="description" content="At the end of the exam, we send a certificate to your e-mail address.">
+    <meta name="description" content="This exam and certificate is completely free">
+    <meta name="description" content="With the contributions of Özgür Integration">
+    <meta name="description" content="YLPIC practice program">
+    <meta name="description" content="Özgür Entegrasyon / Ankara">
+    <meta property="og:title" content="Özgür Entegrasyon Linux Quiz">
+    <meta property="og:site_name" content="Linux Quiz">
+    <meta property="og:url" content="https://oentegrasyon.github.io/linux-quiz/">
+    <meta property="og:description" content="Our company, which has been operating especially in the Public Information sector since 2014 as an integrator, has been working on system integration, data center relocation, disaster recovery center">
+    <meta property="og:type" content="website">
+<meta property="og:image" content="www.ozgurentegrasyon.com">
     <link rel="shortcut icon" type="image/jpg" href="https://oentegrasyon.github.io/linux-quiz/assets/images/favicon.png">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200;500&family=Nunito+Sans:wght@300;600&display=swap" rel="stylesheet">
